HtmlUi: Fix node animation when expanding/collapsing at fast rate
When a node animation is already in progress, it has to be stopped
before a new animation is started. Otherwise, the 'complete' callback
will break the tree (wrapping and unwrapping nodes in the
'animation-wrapper' is not in sync).

Renamed cssClass 'animationWrapper' to 'animation-wrapper' (code style,
consistency).

#163279
#160986

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/Outline.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/Outline.css
@@ -26,7 +26,7 @@
 
 
   & > .tree-node,
-  & > .animationWrapper > .tree-node {
+  & > .animation-wrapper > .tree-node {
     #scout.font-text-plus();
     cursor: pointer;
     border: 0;
@@ -71,7 +71,7 @@
   /* bread crumb mode */
 
   .navigation-breadcrumb & > .tree-node,
-  .navigation-breadcrumb & > .animationWrapper > .tree-node {
+  .navigation-breadcrumb & > .animation-wrapper > .tree-node {
     overflow: visible;
     white-space: normal;
     text-align: center;
